Update composer.json file

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "name": "msh/jquery-code",
     "description": "Frequently used jQuery Code",
     "require": {
-        "php": "^5.3.3 || ^7.0",
+        "php": "^5.3.3 || ^7.0"
     }
 }
