--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,19 @@
 {
     "name": "msh/jquery-code",
     "description": "Frequently used jQuery Code",
-    "version": "1.7.2",
-        "type": "jquery",
-        "dist": {
-          "url": "http://code.jquery.com/jquery-1.7.2.js",
-          "type": "file"
+    "authors": [
+        {
+            "name": "msh",
+            "email": "@gmail.com"
         }
+    ],
+    "minimum-stability": "stable",
+    "require": {
+		"php": ">=5.4.0"
+	},
+    "autoload": {
+        "psr-0": {
+            "Rezadaulay\\JqUpload\\": "src/"
+        }
+}
 }
