--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,6 @@
             "name": "msh"
         }
     ],
-    "minimum-stability": "stable",
     "require": {
-		"php": ">=5.4.0"
-	},
-    "autoload": {
-        "psr-0": {
-            "Rezadaulay\\JqUpload\\": "src/"
-        }
-}
+        "php": "^5.3.3 || ^7.0"
 }
